# enhance-cardiac-load-monitoring

./: .gitignore  Claude.md  README.md  docker-compose.yml  docker_setup_guide.txt  package-lock.json  tailwind.config.js
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py
backend/core/: compute.py  data.py  database.py  flags.py  limiter.py  models.py
backend/core/security/: auth0.py  dependencies.py  jwt.py  password.py
backend/data/: Gokul.csv  Manoj Kumar S.csv  Naganathan Pandi.csv  Rahul Keerthiyan.csv  Subbhash S.csv  Vishaal Ramesh.csv  athletes.csv
backend/routers/: athletes.py  dashboard.py  group.py  profiles.py  reports.py
backend/scripts/: create_admin.py  migrate_csv.py
data/: Ajay D.csv  Benish Jawahar.csv  Gokul.csv  Jayaraman T.csv  ManojKumar S.csv  Naganathan Pandi.csv  Navinn Kumar S.csv  Rahul Keerthiyan.csv  Sarabheshwar L.csv  Subbhash S.csv  Vishaal Ramesh.csv  athletes.csv
docs/: backend_development.md  backend_migration_final.md  backend_migration_report.md  fastapi.md  project_brief.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: theme-provider.jsx
public/sample data/: Ajay D.csv  Benish Jawahar.csv  Jayaraman.csv  Navinn Kumar S.csv
src/context/: auth-context.jsx
src/data/: athletes.js  dashboardData.js
src/pages/: Dashboard.jsx  GroupDashboard.jsx  Login.jsx  Profiles.jsx  Reports.jsx  Users.jsx
src/utils/: csvParser.js  dataService.js
(+50 files in other folders)
